<resources>
    <string name="app_name">UPstore</string>
    // User
    <string name="settings">הגדרות</string>
    <string name="categories">קטגוריות</string>
    <string name="notification_switch">התראות: </string>


    // Login and Register
    <string name="name">שם: </string>
    <string name="name_business">שם העסק: </string>
    <string name="password">סיסמה: </string>
    <string name="phone_number">מספר פלאפון: </string>
    <string name="email">אימייל: </string>
    <string name="required_field">שדה חובה: </string>
    <string name="register">הירשם</string>
    <string name="registration_user">הרשמה - חשבון אישי</string>
    <string name="registration_business">הרשמה - חשבון עסקי</string>
    <string name="registration_business_description">הסבר בקצרה: </string>
    <string name="new_register_business">עסק חדש ? הירשם עכשיו !</string>
    <string name="login">התחבר</string>
    <string name="new_register">משתמש חדש ? הירשם עכשיו !</string>

    <string name="service_name">Upneti</string>
    <string name="upneti_description">חיבורים עסקיים, שיתופי פעולה המלצות, מפגשי אונליין לעזרה הדדית, לצמיחה עסקית והעמקת ידע בנושאים אישיים.
    כל מה שעסק צריך לצמוח ולהצליח בקהילה אחת.</string>
    <string name="magicflex_description">המוצר של MagicFlex הוא כלי דיגיטלי ואוטומטי מבוסס בינה מלאכותית, המביא לשיפור משמעותי בתפעול ויציבות הביצועים של "חוות השרתים(Data Centers) ".

המוצר שלנו ממפה את מרכיבי המערכות (חומרה ותוכנת הפעלה), מבצע אנליזות באופן אוטומטי ומספק התראות על תקלות קיימות ועל נקודות לטיפול על פי רמת הסיכון בכדי למנוע תקלות עתידיות. בנוסף, הוא מציג תוכנית תיקון לכל סוג ורמה של תקלה קיימת או תקלה עתידית, שהמוצר עצמו איתר.

בשורה התחתונה, השימוש בכלי של MagicFlex חוסך משאבים רבים וזמן בניהול "חוות השרתים", ומוריד באופן משמעותי את הסיכון לנפילות (Outage) ותקלות.

בין לקוחותינו נמצאים בנקים, חברות ביטוח, משרדי ממשלה ועיריות, חברות אינטגרציה ועוד.

כל לקוחותינו מעידים על שיפור משמעותי ביציבות של "חוות השרתים" ובביצועים, שלא ניתן היה להשיגם בכל דרך אחרת.

</string>
    <string name="pay_stars">שלם בכוכבים</string>
    <string name="pay_paypal">שלם בפייפאל</string>
    <string name="service_cost">10 כוכבים</string>
    <string name="pay_option">בחר אופן תשלום</string>
    <string name="add_stars_header">קניית כוכבים</string>
    <string name="add_stars">הוסף כוכבים</string>
    <string name="stars_quantity">כמות כוכבים</string>
    <string name="business_stars_cost">עלות בכוכבים: </string>
    <string name="business_name">Business Name</string>
    <string name="description">Description</string>
    <string name="phone">Phone Number</string>
    <string name="cost_star">מחיר בכוכבים</string>
    <string name="cost_paypal">מחיר בשקלים</string>
    <string name="stars">כוכבים</string>
    <string name="star_balance">יתרת כוכבים</string>
    <string name="buy_stars">קניית כוכבים</string>
    <string name="transaction_history">היסטוריית רכישות</string>
    <string name="update_profile">שמור</string>
    <string name="add_credit_card">הוסף כרטיס אשראי</string>
    <string name="add_credit_card_number">"מספר כרטיס אשראי: "</string>
    <string name="add_credit_card_date">"תוקף: "</string>
    <string name="add_credit_card_cvc">3 ספרות בגב הכרטיס :</string>
    <string name="logout">התנתק</string>
</resources>