<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buy_stars">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            app:theme="@style/ToolbarColoredBackArrow"
            app:popupTheme="@style/AppTheme"/>


    <ImageView
        android:id="@+id/current_service"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorAccent"
        android:padding="20dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:padding="20dp">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#fece2f"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_baseline_stars_24" />

                <TextView
                    android:id="@+id/stars_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/bungee"
                    android:includeFontPadding="false"
                    android:text="0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/stars_transactions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stars_balance"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:text="@string/star_balance"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <EditText
        android:id="@+id/stars_buy_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/stars_quantity"
        android:layout_gravity="center"
        />
    //Data Change
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/buy_stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_stars"
            android:fontFamily="@font/bungee"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>